src/style.css
html, body, #___gatsby, #gatsby-focus-wrapper {
    margin: 0;
    background-color: #222;
    font-family: 'Ubuntu', sans-serif;
}

a, a:visited {
    color: #fff;
    text-decoration: none;
    font-weight: bold;
    border-bottom: 2px solid #fff;
}

a:hover {
    color: #377cc3;
    border-color: #377cc3;
}

a:active {
}

h1, h2, h3, h4, h5, h6 {
    font-style: italic;
    margin: 0;
}

::-webkit-scrollbar {
    width: 10px;
    height: 10px;
}

::-webkit-scrollbar-track {
    background-color: transparent;
}

::-webkit-scrollbar-thumb {
    background: #fff;
    border-radius: 4px;
}

::-webkit-scrollbar-thumb:hover {
    background: #aaa;
}

::-moz-selection { background: #888; }
::selection { background: #000; }

